--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "author": "Leonardo C. Almeida",
   "license": "ISC",
   "scripts": {
-    "dev": "yarn ts-node-dev src/server.ts"
+    "dev": "yarn ts-node-dev src/server.ts",
+    "knex:migrate": "knex --knexfile knexfile.ts migrate:latest",
+    "knex:seed": "knex --knexfile knexfile.ts seed:run"
   },
   "keywords": [],
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "knex": "^0.21.1",
+    "sqlite3": "^4.2.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.6",
