--- a/package.json
+++ b/package.json
@@ -5,20 +5,23 @@
   "author": "Leonardo C. Almeida",
   "license": "ISC",
   "scripts": {
-    "dev": "yarn ts-node-dev src/server.ts",
-    "knex:migrate": "knex --knexfile knexfile.ts migrate:latest",
-    "knex:seed": "knex --knexfile knexfile.ts seed:run"
+    "dev": "yarn ts-node-dev --ignore-watch node_modules src/server.ts",
+    "migrate": "knex --knexfile knexfile.ts migrate:latest",
+    "seed": "knex --knexfile knexfile.ts seed:run"
   },
   "keywords": [],
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "knex": "^0.21.1",
-    "sqlite3": "^4.2.0"
+    "pg": "^8.2.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.6",
     "ts-node": "^8.10.2",
     "ts-node-dev": "^1.0.0-pre.44",
-    "typescript": "^3.9.3"
+    "typescript": "^3.9.3",
+    "@types/cors": "^2.8.6"
   }
 }
